<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterStepTwoActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="343dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_step_two_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="136dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="108dp"
        android:text="@string/register_str"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/et_exemple.com"
        app:layout_constraintEnd_toStartOf="@+id/et_exemple.com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_exemple.com"
        android:layout_width="343dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/login_button"
        android:hint="@string/nickname_str"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="17dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginBottom="344dp"
        android:text="@string/privacy_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>