<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:text="@string/next"
        android:textStyle="bold"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="343dp"
        android:layout_height="52dp"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:background="@drawable/ic_back_button"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="25dp"
        android:layout_height="25dp"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_marginStart="34dp"
        android:layout_marginTop="104dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="36sp"
        android:text="@string/register_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:background="@drawable/login_button"
        android:paddingStart="17dp"
        android:id="@+id/et_exemple.com"
        android:textColorHint="@color/black"
        android:hint="@string/email_str"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="343dp"
        android:layout_height="52dp"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:background="@drawable/login_button"
        android:hint="@string/password_str"
        android:id="@+id/et_password"
        android:layout_width="343dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:paddingStart="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_exemple.com"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>