<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button_login"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_back_button" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_marginStart="34dp"
        android:layout_marginTop="104dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="36sp"
        android:text="@string/log_in_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:background="@drawable/login_button"
        android:paddingStart="17dp"
        android:id="@+id/et_exemple.com_login"
        android:textColorHint="@color/black"
        android:hint="@string/email_str"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="343dp"
        android:layout_height="52dp"
        tools:ignore="RtlSymmetry"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:background="@drawable/login_button"
        android:paddingStart="17dp"
        android:id="@+id/et_password.com_login"
        android:textColorHint="@color/black"
        android:hint="@string/password_str"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_exemple.com_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="343dp"
        android:layout_height="52dp"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:text="@string/str_log"
        android:backgroundTint="@color/black"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/et_password.com_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="343dp"
        android:layout_height="52dp"
        tools:ignore="RtlSymmetry" />









</androidx.constraintlayout.widget.ConstraintLayout>